--- a/UniFiler10/UniFiler10.csproj
+++ b/UniFiler10/UniFiler10.csproj
@@ -156,6 +156,9 @@
     <Compile Include="Views\CameraView.xaml.cs">
       <DependentUpon>CameraView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ConfirmationBeforeExportingBinder.xaml.cs">
+      <DependentUpon>ConfirmationBeforeExportingBinder.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ConfirmationBeforeDeletingBinder.xaml.cs">
       <DependentUpon>ConfirmationBeforeDeletingBinder.xaml</DependentUpon>
     </Compile>
@@ -266,6 +269,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\CameraView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\ConfirmationBeforeExportingBinder.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
