--- a/BackgroundOneDriveUploader/BackgroundOneDriveUploader.csproj
+++ b/BackgroundOneDriveUploader/BackgroundOneDriveUploader.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A5E40534-5799-4590-83C6-439ADB08C728}</ProjectGuid>
     <OutputType>winmdobj</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BackgroundOneDriveUploader</RootNamespace>
-    <AssemblyName>BackgroundOneDriveUploader</AssemblyName>
+    <RootNamespace>BackgroundTasks</RootNamespace>
+    <AssemblyName>BackgroundTasks</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
@@ -112,6 +112,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\onedrive-sdk-csharp-master\src\OneDriveSdk.WinStore\OneDriveSdk.WinStore.csproj">
+      <Project>{a8c54259-542c-40ac-aeb6-eefc3aa79859}</Project>
+      <Name>OneDriveSdk.WinStore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\onedrive-sdk-csharp-master\src\OneDriveSdk\OneDriveSdk.csproj">
+      <Project>{1368527b-d7b2-46ad-893d-6dc8c073d819}</Project>
+      <Name>OneDriveSdk</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Utilz\Utilz\Utilz.csproj">
       <Project>{06425613-e56b-4c98-a8d2-58900e36e417}</Project>
       <Name>Utilz</Name>
