--- a/UniFiler10/UniFiler10.csproj
+++ b/UniFiler10/UniFiler10.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Controlz\LolloTextBox.cs" />
     <Compile Include="Converters\Converters.cs" />
     <Compile Include="Services\AudioRecorder.cs" />
+    <Compile Include="Services\BackgroundTaskHelper.cs" />
     <Compile Include="Services\DocumentExtensions.cs" />
     <Compile Include="Services\Licenser.cs" />
     <Compile Include="Controlz\TolerantListView.cs" />
