--- a/UniFiler10/UniFiler10.csproj
+++ b/UniFiler10/UniFiler10.csproj
@@ -105,7 +105,6 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controlz\BackableOpenableObservableControl.cs" />
     <Compile Include="Controlz\LolloToggleButton.xaml.cs">
       <DependentUpon>LolloToggleButton.xaml</DependentUpon>
     </Compile>
@@ -338,6 +337,9 @@
       <Project>{b5e7ad27-3e03-456e-950d-81d2ebf2634b}</Project>
       <Name>DataModel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\SampleMetadata\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
